Fixed scrollbar right bottom corner (were whhite instead of gray)

--- a/style.css
+++ b/style.css
@@ -166,7 +166,9 @@ header nav::-webkit-scrollbar {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--main-color)
 }
-
+::-webkit-scrollbar-corner {
+  background: #262727
+}
 
 
 
